# camera-bot

./: .gitignore  Cargo.toml  README.md
src/: alpha_image.rs  args.rs  auto_trigger.rs  capture_thread.rs  main.rs  snapshot_repo.rs  ui_thread.rs  web.rs
